--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="failed_login">로그인에 실패하였습니다.</string>
     <string name="facebook_app_id">884710338595518</string>
     <string name="google_map_api_key">AIzaSyDLckUM-TfORiawBSqlsR4sIp5qk7rOr4o</string>
+    <string name="aed_api_key">o6Ea0CAH7jCtTwXGrSM8WWWyEGtMDjmxQJBi7pUh%2Fn5Ec4tEPWIKzx%2Fe8YuOKCb2jwn5CqwAcxrqVD6rNRsFwg%3D%3D</string>
     <string name="fb_login_protocol_scheme">fb884710338595518</string>
 
 
