--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,7 +12,7 @@
         M 6 52 L 27 52 L 32 51 L 36 55 L 46 26 L 56 69 L 61 50 L 66 56 L 70 50 L 74 52 L 94 52 M 6 52 L 27 52 L 32 51
     </string>
     <string name="dash">-</string>
-    <string name="minbpm">40</string>
-    <string name="maxbpm">120</string>
+    <string name="min_bpm">40</string>
+    <string name="max_bpm">120</string>
 
 </resources>
