--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,16 +1,23 @@
 <resources>
     <string name="app_name">CardioCare</string>
+    
+    <!-- MainActivity -->
+   
     <string name="success_login">로그인 되었습니다.</string>
     <string name="failed_login">로그인에 실패하였습니다.</string>
     <string name="facebook_app_id">884710338595518</string>
     <string name="google_map_api_key">AIzaSyDLckUM-TfORiawBSqlsR4sIp5qk7rOr4o</string>
     <string name="aed_api_key">o6Ea0CAH7jCtTwXGrSM8WWWyEGtMDjmxQJBi7pUh%2Fn5Ec4tEPWIKzx%2Fe8YuOKCb2jwn5CqwAcxrqVD6rNRsFwg%3D%3D</string>
     <string name="fb_login_protocol_scheme">fb884710338595518</string>
+    
+        
+    <!-- HomeActivity -->
     <string name="dataInputBtnText">내 정보 입력하기</string>
     <string name="predictBtnText">심혈관질환 예측하기</string>
     <string name="bpmBtnText">심박수 측정하기</string>
     <string name="aedBtnText">주변 AED 찾아보기</string>
-
+        
+    <!-- HeartAnim -->
     <string name="heartpath_origin">
         M 6 52 L 27 52 L 32 51 L 36 55 L 46 26 L 56 69 L 61 50 L 66 56 L 70 50 L 74 52 L 94 52
     </string>
